Fix for bug #6880: LAST_INSERT_ID() within a statement