sql/item_func.cc
@@ -2233,15 +2233,16 @@ longlong Item_func_release_lock::val_int()
 longlong Item_func_last_insert_id::val_int()
 {
   DBUG_ASSERT(fixed == 1);
+  THD* thd= current_thd;
   if (arg_count)
   {
     longlong value=args[0]->val_int();
-    current_thd->insert_id(value);
+    thd->insert_id(value);
     null_value=args[0]->null_value;
   }
   else
-    current_thd->lex->uncacheable(UNCACHEABLE_SIDEEFFECT);
-  return current_thd->insert_id();
+    thd->lex->uncacheable(UNCACHEABLE_SIDEEFFECT);
+  return thd->last_insert_id_used ? thd->current_insert_id : thd->insert_id();
 }
 
 /* This function is just used to test speed of different functions */
